// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OptionButtonGroup Snapshots > Dark Mode > renders disabled state 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <span
    class="text-sm font-medium text-ink-700 dark:text-parchment-200"
    id=":r5:-label"
  >
    Test Options
  </span>
  <div
    aria-labelledby=":r5:-label"
    class="flex flex-wrap gap-2"
    role="group"
  >
    <button
      aria-pressed="true"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-gold-100 border-gold-500 text-ink-900 dark:bg-gold-600/20 dark:border-gold-500 dark:text-parchment-100
                opacity-50 cursor-not-allowed
              "
      disabled=""
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        First option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                opacity-50 cursor-not-allowed
              "
      disabled=""
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        Second option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                opacity-50 cursor-not-allowed
              "
      disabled=""
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 3
      </span>
    </button>
  </div>
</div>
`;

exports[`OptionButtonGroup Snapshots > Dark Mode > renders with no selection 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <span
    class="text-sm font-medium text-ink-700 dark:text-parchment-200"
    id=":r3:-label"
  >
    Test Options
  </span>
  <div
    aria-labelledby=":r3:-label"
    class="flex flex-wrap gap-2"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        First option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        Second option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 3
      </span>
    </button>
  </div>
</div>
`;

exports[`OptionButtonGroup Snapshots > Dark Mode > renders with selected option 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <span
    class="text-sm font-medium text-ink-700 dark:text-parchment-200"
    id=":r4:-label"
  >
    Test Options
  </span>
  <div
    aria-labelledby=":r4:-label"
    class="flex flex-wrap gap-2"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        First option
      </span>
    </button>
    <button
      aria-pressed="true"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-gold-100 border-gold-500 text-ink-900 dark:bg-gold-600/20 dark:border-gold-500 dark:text-parchment-100
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        Second option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 3
      </span>
    </button>
  </div>
</div>
`;

exports[`OptionButtonGroup Snapshots > Light Mode > renders disabled state 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <span
    class="text-sm font-medium text-ink-700 dark:text-parchment-200"
    id=":r2:-label"
  >
    Test Options
  </span>
  <div
    aria-labelledby=":r2:-label"
    class="flex flex-wrap gap-2"
    role="group"
  >
    <button
      aria-pressed="true"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-gold-100 border-gold-500 text-ink-900 dark:bg-gold-600/20 dark:border-gold-500 dark:text-parchment-100
                opacity-50 cursor-not-allowed
              "
      disabled=""
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        First option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                opacity-50 cursor-not-allowed
              "
      disabled=""
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        Second option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                opacity-50 cursor-not-allowed
              "
      disabled=""
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 3
      </span>
    </button>
  </div>
</div>
`;

exports[`OptionButtonGroup Snapshots > Light Mode > renders with no selection 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <span
    class="text-sm font-medium text-ink-700 dark:text-parchment-200"
    id=":r0:-label"
  >
    Test Options
  </span>
  <div
    aria-labelledby=":r0:-label"
    class="flex flex-wrap gap-2"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        First option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        Second option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 3
      </span>
    </button>
  </div>
</div>
`;

exports[`OptionButtonGroup Snapshots > Light Mode > renders with selected option 1`] = `
<div
  class="flex flex-col gap-2 "
>
  <span
    class="text-sm font-medium text-ink-700 dark:text-parchment-200"
    id=":r1:-label"
  >
    Test Options
  </span>
  <div
    aria-labelledby=":r1:-label"
    class="flex flex-wrap gap-2"
    role="group"
  >
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 1
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        First option
      </span>
    </button>
    <button
      aria-pressed="true"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-gold-100 border-gold-500 text-ink-900 dark:bg-gold-600/20 dark:border-gold-500 dark:text-parchment-100
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 2
      </span>
      <span
        class="text-xs text-ink-500 dark:text-parchment-400 mt-0.5"
      >
        Second option
      </span>
    </button>
    <button
      aria-pressed="false"
      class="
                flex flex-col items-start px-4 py-2 rounded-lg border-2 transition-all
                focus:outline-none focus:ring-2 focus:ring-gold-400 focus:ring-offset-2
                focus:ring-offset-parchment-100 dark:focus:ring-offset-shadow-900
                bg-parchment-50 border-ink-300 text-ink-700 hover:bg-gold-50 hover:border-gold-300 dark:bg-shadow-800 dark:border-shadow-600 dark:text-parchment-300 dark:hover:border-shadow-500 dark:hover:bg-shadow-700
                cursor-pointer
              "
      role="button"
      type="button"
    >
      <span
        class="font-medium"
      >
        Option 3
      </span>
    </button>
  </div>
</div>
`;
